@@ -1,3 +1,6 @@
+[B]Version 1.0.3[/B]
+- Use danishaddons module version 1.0.1
+
 [B]Version 1.0.2[/B]
 - Changed how video URLs is resolved to make it a blocking operation in XBMC, thereby avoid the user selecting multiple videos at once.
 - Changed how the video clip date is displayed in the lists
